# CameraAdaptors

./: .gitignore  CMakeLists.txt  README.md  run.sh
install/include/: camera_base.h  utils.h
src/: CMakeLists.txt
src/hikang/: CMakeLists.txt  CMakeListsBin.txt  hikang.cpp  hikang.h  main.cpp
src/orbbec/: CMakeLists.txt  CMakeListsBin.txt  main.cpp  orbbec.cpp  orbbec.h
src/run/: CMakeLists.txt  camera_manger.cpp
